--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://kawaiho.notion.site/Hi-I-m-Ka-Wai-594dced8d75e41d1924a602eb8759985" />
+    <meta http-equiv="refresh" content="0; url=https://kawaiho.notion.site/" />
 </head>
 <body>
 </body>
